fix roadmap slider on mobile

--- a/src/components/06_Roadmap/Roadmap.css
+++ b/src/components/06_Roadmap/Roadmap.css
@@ -9,3 +9,10 @@
   line-height: 3rem;
   padding: 50px 0px;
 }
+
+@media only screen and (max-width: 420px) {
+  .roadmap {
+    padding: 2rem 0rem 6rem 0rem;
+    background: black;
+  }
+}
