--- a/src/components/06_Roadmap/Timeline.css
+++ b/src/components/06_Roadmap/Timeline.css
@@ -21,7 +21,6 @@
 
 .eventTitle {
   padding-bottom: 10px;
-  font-size: 22px;
 }
 
 .descriptionEventName,
@@ -31,7 +30,7 @@
   list-style-type: disc;
   list-style-position: inside;
   text-indent: -1.3em;
-  padding-left: 3em;
+  padding-left: 2em;
   color: aqua;
 }
 
@@ -64,7 +63,7 @@
 }
 
 .specificEvent {
-  padding-top: 20px;
+  padding-top: 8px;
   position: relative;
   display: inline-block;
   text-align: center;
@@ -104,7 +103,7 @@
 }
 
 .wrapperAll {
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
   position: relative;
 }
